# VerifiedNovelGameEngine

./: Cargo.toml  ChangeLog.md  LICENSE  README.md  package.yaml  venge.cabal
app/: Error.hs  Main.hs  VConfig.hs
example/: config.vngc  scene1.vngl  title.vng  title.vngl
quickstart/: quickstart.vproject  title.scene
quickstart/layout/: title.vngl
resources/: readme.txt
src/: AMachine.hs  Component.hs  Event.hs  Game.hs  Monitor.hs  Sample.hs  ScriptParser.hs  VConfig.hs  compiler.rs  instruction.rs  instruction.rs.bkup  interpreter.rs  interpreter.rs.bkup  main.rs  project.rs  ui.rs  vconfig.rs  verror.rs  vm.rs  vngl.rs
src/AMachine/: DOM.hs  Event.hs  Instr.hs  Memory.hs  Var.hs
src/Component/: NovelBody.hs  NovelTitle.hs
src/NovelGame/: Title.hs
src/interpreter/: dom.rs  instr.rs  memory.rs  screen.rs  script.rs
src/vm/: config.rs  dom.rs  drawable.rs  instr.rs  memory.rs  screen.rs
src/vm/screen/: config.rs  drawable.rs
test/: insts.txt
test/simple/: simple.vproject
test/simple/scene/: title.scene
