[package]
name = "venge"
version = "0.1.0"
authors = ["satakeyuki <satake@logic.cs.tsukuba.ac.jp>"]
edition = "2018"

[dependencies]
clap = "*"
glium = "*"
#rust-ini = "*"
toml = "*"
xml-rs = "*"
image = "*"
glium_text = "*"
#sdl2 = "*"
combine = "*"
pest = "*"
[dependencies.sdl2]
version = "0.33"
#version = "*"
default-features = false
features = ["ttf", "image"]
